--- a/work/css/css/style.css
+++ b/work/css/css/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-input,select,button{
+input, select, button{
   appearance: none;
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -20,7 +20,7 @@ input,select,button{
   width: 600px;
 }
 
-.cotent__title{
+.content__title{
   font-size: 18px;
   color: #000000;
 }
@@ -76,8 +76,8 @@ margin-top: 50px;
 
 .input__area:focus{
   background-color: #fff;
-  border-color: rgba(93,130,194,0.4);
-  box-shadow: 0px 0px 0px 2px rgba(1,90,191,0.1);
+  border-color: rgba(93, 130, 194, 0.4);
+  box-shadow: 0px 0px 0px 2px rgba(1, 90, 191, 0.1);
 }
 
 .select__area, .gender__area{
