--- a/work/css/style.css
+++ b/work/css/style.css
@@ -120,7 +120,7 @@ margin-top: 50px;
 .gender__element span:before{
   content: "";
   position: absolute;
-  top: 50px;
+  top: 50%;
   left: 0px;
   width: 14px;
   height: 14px;
